--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'https://aoe-api.nhohoai.vn'
+VUE_APP_BASE_API = 'http://127.0.0.1:3000/v1'
+PORT = 4000
+
