--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,5 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://localhost:3000/v1'
+VUE_APP_BASE_API = 'http://127.0.0.1:3000/v1'
 PORT = 4000
