--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,6 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'hhttps://api.nhohoai.vn/v1'
+VUE_APP_BASE_API = 'https://api.nhohoai.vn/v1'
 PORT = 4000
 
